springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: 552166557473.dkr.ecr.us-east-1.amazonaws.com/springdemo:2
        imagePullPolicy: Always
        ports:
        - containerPort: 33333
