springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hello.tdashpute.online
    http:
      paths:
      - path: /listallcustomers
        pathType: Prefix
        backend:
          service:
            name: springboot
            port:
              number: 33333
